# MediaCrawler

./: .dockerignore  .env.example  .gitignore  Dockerfile  README-官方使用文档.md  README.md  design-qa.md  docker-compose.yml  main.py  pyproject.toml  reasonix.toml  start.bat  start.ps1  var.py  启动WebUI.bat
.github/workflows/: ci.yml
api/: .local_tasks.json  auth.py  main.py
api/data/: category_rules.json  industry_keywords.json
api/routers/: __init__.py  auto_demand.py  crawler.py  dashboard.py  data.py  feishu.py  feishu_webhook.py  llm_config.py  local_tasks.py  pipeline.py  websocket.py
api/schemas/: auto_demand.py  crawler.py
api/services/: auto_demand_manager.py  crawler_manager.py  data_stats.py  dedup_filter.py  local_task_manager.py  needs_analyzer.py  opportunity_evaluator.py  pipeline_manager.py  report_store.py  solution_generator.py
api/webui/: dashboard.css  dashboard.js  index.html
cache/: local_cache.py
config/: base_config.py
database/: db_session.py
docs/: crawler-workbench-layout-proposal.html  feishu_setup.md
integrations/: __init__.py  feishu_client.py  feishu_webhook.py  field_mapper.py
media_platform/douyin/: client.py
proxy/: proxy_ip_pool.py
scripts/: __init__.py  auto_demand_report.py  auto_demand_scheduler.py  sync_to_feishu.py
test/: test_proxy_ip_pool.py  test_redis_cache.py
tests/: test_auto_demand_api.py  test_data_sync_api.py  test_demand_category_rules.py  test_demand_keywords.py  test_demand_workflow.py  test_feishu_api.py  test_feishu_client.py  test_feishu_field_mapper.py  test_feishu_task_runner.py  test_feishu_webhook.py  test_feishu_webhook_dedup.py  test_pipeline_api.py  test_solution_generator_new.py  test_store_factory.py  test_sync_to_feishu.py
tools/: async_file_writer.py  config_crypto.py  crawler_util.py  utils.py
(+14 files in other folders)
